<resources>
    <string name="app_name">작은 실험실</string>
    <string name="email_address">rlj1202@gmail.com</string>

    <string name="navigation_drawer_open">navigation open</string>
    <string name="navigation_drawer_close">navigation close</string>

    <string name="new_experiment">새 실험</string>
    <string name="new_measurement">새 측정</string>
    <string name="new_analyze">새 분석</string>
    <string name="title">제목</string>
    <string name="description">설명</string>
    <string name="done">완료</string>
    <string name="view">보기</string>
    <string name="experiment">실험</string>
    <string name="measurement">측정</string>
    <string name="analyze">분석</string>
    <string name="start">시작</string>
    <string name="sensor">센서</string>
    <string name="time">시간</string>
    <string name="delete">삭제</string>
    <string name="select">선택</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="temporarily">임시</string>
    <string name="distance">거리</string>

    <string name="derivative">미분</string>
    <string name="integral">적분</string>

    <string name="analyze_text1">에 대해서</string>
    <string name="analyze_text2">를 분석</string>

    <string name="no_items_yet">아직 항목이 없습니다.</string>

    <string name="delete_confirm">정말 삭제하시겠습니까?</string>

    <string name="not_calibrated">Not calibrated</string>

    <string name="type_none">none</string>
    <string name="type_accelerometer">가속도</string>
    <string name="type_gyroscope">자이로</string>
    <string name="type_gravity">중력</string>
    <string name="type_light">조도</string>
    <string name="type_magnetic_field">자기장</string>
    <string name="type_pressure">압력</string>
    <string name="type_linear_acceleration">선형 가속도</string>
    <string name="type_proximity">근접</string>
    <string name="type_orientation">방향</string>

    <string name="type_displacement">변위</string>
    <string name="type_velocity">속도</string>
    <string name="type_jerk">가가속도</string>
</resources>
